Avoid errors when IE isn't fully initialized
This prevents the following error:

```
    Invoke-WebRequest : The response content cannot be parsed because the Internet Explorer engine is not available, or

    Internet Explorer's first-launch configuration is not complete. Specify the UseBasicParsing parameter and try again
  .
    At line:1 char:6
    + & { (Invoke-WebRequest -Uri https://raw.githubusercontent.com/kzu/cor ...
    +      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        + CategoryInfo          : NotImplemented: (:) [Invoke-WebRequest], NotSupportedException
        + FullyQualifiedErrorId : WebCmdletIEDomNotSupportedException,Microsoft.PowerShell.Commands.InvokeWebRequestCom
  mand
```

By basically following the error's advice :)

--- a/updater/CoreBuild.Updater.targets
+++ b/updater/CoreBuild.Updater.targets
@@ -28,7 +28,7 @@
 	<Target Name="_FetchRemoteETag" DependsOnTargets="_FetchRemoteETagPS;_FetchRemoteETagCurl" />
 
 	<Target Name="_FetchRemoteETagPS" Condition="'$(OS)' == 'Windows_NT'">
-		<Exec Command="&quot;$(PS)&quot; -NoProfile -Command &quot;&amp; { (Invoke-WebRequest -Uri $(UpdateUrl) -Method HEAD).Headers.ETag }&quot;" 
+		<Exec Command="&quot;$(PS)&quot; -NoProfile -Command &quot;&amp; { (Invoke-WebRequest -Uri $(UpdateUrl) -Method HEAD -UseBasicParsing).Headers.ETag }&quot;" 
 			  StandardOutputImportance="low" 
 			  EchoOff="true" 
 			  ConsoleToMSBuild="true">
@@ -61,7 +61,7 @@
 		<Exec Command="$(Curl) -o &quot;$(UpdateTarget)&quot; &quot;$(UpdateUrl)&quot;" 
 			  Condition="'$(OS)' != 'Windows_NT'" />
 
-		<Exec Command="&quot;$(PS)&quot; -NoProfile -Command &quot;&amp; { Invoke-WebRequest -Uri $(UpdateUrl) -OutFile &quot;$(UpdateTarget)&quot; }&quot;" 
+		<Exec Command="&quot;$(PS)&quot; -NoProfile -Command &quot;&amp; { Invoke-WebRequest -Uri $(UpdateUrl) -OutFile &quot;$(UpdateTarget)&quot; -UseBasicParsing }&quot;" 
 			  EchoOff="true" 
 			  Condition="'$(OS)' == 'Windows_NT'" />
 
