Add common ignores now that we have the Help package source

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
 .nuget
-.vs
+out
+bin
+obj
+packages
+*.nuget.targets
+*.nuget.props
+*.lock.json
 *.nupkg
-log.txt
+*.suo
+*.user
+*.cache
+.vs
+.*
+*.binlog
