--- a/help/CoreBuild.Help.targets
+++ b/help/CoreBuild.Help.targets
@@ -2,13 +2,17 @@
   <UsingTask TaskName="Help" AssemblyFile="CoreBuild.Help.dll" />
 
   <PropertyGroup>
-    <!-- Get help on public properties -->
+    <!-- Project to render help for. Defaults to the current project file. -->
+    <HelpProject Condition="'$(HelpProject)' == ''">$(MSBuildProjectFullPath)</HelpProject>
+    <!-- Whether to get help for imported files. Defaults to 'false' -->
+    <HelpImports Condition="'$(HelpImports)' == ''">false</HelpImports>
+    <!-- Whether to get help on public properties. Defaults to 'true' -->
     <HelpProperties Condition="'$(HelpProperties)' == ''">true</HelpProperties>
-    <!-- Get help on public targets -->
+    <!-- Whether to get help on public targets. Defaults to 'true' -->
     <HelpTargets Condition="'$(HelpTargets)' == ''">true</HelpTargets>
-    <!-- A wildcard pattern to evaluate against properties or targets for inclusion on Help target runs -->
+    <!-- Regex to evaluate against properties or targets for inclusion in help. Defaults to '.*' -->
     <HelpInclude Condition="'$(HelpInclude)' == ''">*</HelpInclude>
-    <!-- A wildcard pattern to evaluate against properties or targets for exclusion on Help target runs -->
+    <!-- Regex to evaluate against properties or targets for exclusion in help. Defaults to '$^' -->
     <HelpExclude Condition="'$(HelpExclude)' == ''"></HelpExclude>
   </PropertyGroup>
 
@@ -17,7 +21,8 @@
 /   _  _ _|__)   .| _| 
 \__(_)| (-|__)|_|||(_| 
 " />
-    <Help ProjectFile="$(MSBuildProjectFullPath)"
+    <Help HelpProject="$(HelpProject)"
+          HelpImports="$(HelpImports)"
           HelpProperties="$(HelpProperties)"
           HelpTargets="$(HelpTargets)"
           HelpInclude="$(HelpInclude)"
