--- a/help/CoreBuild.Help.targets
+++ b/help/CoreBuild.Help.targets
@@ -11,9 +11,9 @@
     <!-- Whether to get help on public targets. Defaults to 'true' -->
     <HelpTargets Condition="'$(HelpTargets)' == ''">true</HelpTargets>
     <!-- Regex to evaluate against properties or targets for inclusion in help. Defaults to '.*' -->
-    <HelpInclude Condition="'$(HelpInclude)' == ''">*</HelpInclude>
+    <HelpInclude Condition="'$(HelpInclude)' == ''">.*</HelpInclude>
     <!-- Regex to evaluate against properties or targets for exclusion in help. Defaults to '$^' -->
-    <HelpExclude Condition="'$(HelpExclude)' == ''"></HelpExclude>
+    <HelpExclude Condition="'$(HelpExclude)' == ''">$^</HelpExclude>
   </PropertyGroup>
 
   <Target Name="Help">
