--- a/help/CoreBuild.Help.csproj
+++ b/help/CoreBuild.Help.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
     <PackageId>CoreBuild.Help</PackageId>
-    <Version>0.1.0</Version>
+    <Version>0.1.1</Version>
     <Authors>Daniel Cazzulino</Authors>
     <Company />
     <Product />
@@ -58,7 +58,7 @@
     <Compile Remove="Test.cs" Condition="'$(Configuration)' == 'Release'" />
   </ItemGroup>
 
-  <Target Name="SetAssemblyVersion" BeforeTargets="GetAssemblyVersion;GetPackageVersion" DependsOnTargets="GitVersion">
+  <Target Name="SetAssemblyVersion" BeforeTargets="GetAssemblyVersion;GetPackageVersion" DependsOnTargets="GitVersion" Condition="'$(GitInfoImported)' == 'true'">
     <PropertyGroup>
       <Version>$(GitSemVerMajor).$(GitSemVerMinor).$(GitSemVerPatch)</Version>
       <PackageVersion>$(Version)</PackageVersion>
