Perform local package deploy after Pack
This allows testing the output locally without waiting for nuget.org to refresh

--- a/help/CoreBuild.Help.csproj
+++ b/help/CoreBuild.Help.csproj
@@ -71,4 +71,16 @@
     </PropertyGroup>
   </Target>
 
+  <Target Name="LocalPublish" AfterTargets="Pack">
+    <Exec Command="rd &quot;$(NuGetPackageRoot)$(PackageId.ToLowerInvariant())&quot; /q /s" Condition="Exists('$(NuGetPackageRoot)$(PackageId.ToLowerInvariant())')" />
+
+    <ItemGroup>
+      <ToDelete Include="$(TEMP)\packages\$(PackageId)*.nupkg" />
+    </ItemGroup>
+    <Delete Files="@(ToDelete)" />
+
+    <MakeDir Directories="$(TEMP)\packages" Condition="!Exists('$(TEMP)\packages')" />
+    <Copy SourceFiles="$(PackageTargetPath)" DestinationFolder="$(TEMP)\packages" />
+  </Target>
+
 </Project>
