Add support for explicitly including properties and targets
As a more granular control of what gets documented, explicit opt-in
for properties and targets (regardless of whether declared or imported)
is added in the form of the @(HelpProperty) and @(HelpTarget) item
groups. This allows projects to surface imported properties and
targets explicitly to make them visible in help.

--- a/help/CoreBuild.Help.targets
+++ b/help/CoreBuild.Help.targets
@@ -29,6 +29,8 @@
           HelpTargets="$(HelpTargets)"
           HelpInclude="$(HelpInclude)"
           HelpExclude="$(HelpExclude)"
+          HelpProperty="@(HelpProperty)"
+          HelpTarget="@(HelpTarget)"
           HelpSearch="$(HelpSearch)"/>
   </Target>
 
