--- a/tools/help/CoreBuild.Help.targets
+++ b/tools/help/CoreBuild.Help.targets
@@ -19,10 +19,10 @@
   </PropertyGroup>
 
   <Target Name="Help">
-    <Message Text=" __        __          
+    <Message Text="{ __        __          
 /   _  _ _|__)   .| _| 
 \__(_)| (-|__)|_|||(_| 
-" />
+:Highlight}" />
     <Help HelpProject="$(HelpProject)"
           HelpImports="$(HelpImports)"
           HelpProperties="$(HelpProperties)"
