--- a/tools/Directory.Build.props
+++ b/tools/Directory.Build.props
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NuGet.Build.Packaging" Version="*" PrivateAssets="all" />
+    <PackageReference Include="NuGet.Build.Packaging" Version="[0.2.2,)" PrivateAssets="all" />
     <PackageReference Include="GitInfo" Version="2.0.8" PrivateAssets="all" />
   </ItemGroup>
 </Project>
