--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ os: Visual Studio 2017
 
 build_script:
   - cmd: echo /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" >> msbuild.rsp
+  - cmd: mkdir %TEMP%\packages || echo Local packages directory already exists
   - cmd: msbuild src\corebuild.nuproj /t:restore
   - cmd: msbuild src\corebuild.nuproj /t:build
 
