--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,14 @@ build_script:
 nuget:
   project_feed: true
   disable_publish_on_pr: false
+
+deploy:
+  - provider: NuGet
+    api_key:
+      secure: 7MS5+XWaFchMXFqzgneQCqo9U0DlxiPXe/KWWUnbCBDEizVn06EjdQZkWu1gbNOJ
+    artifact: Package
+    on:
+      branch: master
   
 artifacts:
   - path: 'src\*.nupkg'
