Build tools first, add CI feed and use personal API key

--- a/src/NuGet.Config
+++ b/src/NuGet.Config
@@ -4,6 +4,7 @@
     <clear />    
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="nugetizer" value="https://ci.appveyor.com/nuget/nugetizer3000" />
+    <add key="corebuild" value="https://ci.appveyor.com/nuget/corebuild" />
     <add key="local" value="%TEMP%\packages" />
   </packageSources>
 </configuration>
