--- a/src/Version.targets
+++ b/src/Version.targets
@@ -2,6 +2,7 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
   <PropertyGroup>
+    <GitDefaultVersion>42.42.42-dev</GitDefaultVersion>
     <GitSkipCache>true</GitSkipCache>
     <GitIgnoreTagVersion>true</GitIgnoreTagVersion>
     <GitCommitsRelativeTo>$(MSBuildThisFileDirectory.TrimEnd('\'))</GitCommitsRelativeTo>
