Never deploy automatically, rely on explicit deployments from AppVeyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,17 +9,14 @@ build_script:
   - cmd: msbuild src\corebuild.nuproj /t:restore
   - cmd: msbuild src\corebuild.nuproj /p:PackageOutputPath=%cd%\out
 
+skip_commits:
+  files:
+    - docs/*
+    - 'README.md'
+
 nuget:
   project_feed: true
   disable_publish_on_pr: true
-
-deploy:
-  - provider: NuGet
-    api_key:
-      secure: uY/U1R+UWPZBitJVqdNu6ttxZPuZeRoM4iUhYLeIMv8028s32s8vYwHMarF3zHdG
-    artifact: Package
-    on:
-      branch: v*
   
 artifacts:
   - path: 'out\*.nupkg'
