Allow automatic deployment from tag
In addition to manually promoted builds

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,14 @@ skip_commits:
 nuget:
   project_feed: true
   disable_publish_on_pr: true
+
+deploy:
+  - provider: NuGet
+    api_key:
+      secure: uY/U1R+UWPZBitJVqdNu6ttxZPuZeRoM4iUhYLeIMv8028s32s8vYwHMarF3zHdG
+    artifact: Package
+    on:
+      appveyor_repo_tag: true
   
 artifacts:
   - path: 'out\*.nupkg'
