--- a/tools/logger/CoreBuild.ColoredConsoleLogger.csproj
+++ b/tools/logger/CoreBuild.ColoredConsoleLogger.csproj
@@ -21,8 +21,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Colorful.Console" Version="1.2.1" />
-    <PackageReference Include="ExCSS" Version="2.0.6" />
+    <PackageReference Include="Colorful.Console" Version="1.2.1" PrivateAssets="all" />
+    <PackageReference Include="ExCSS" Version="2.0.6" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Build" Version="14.*" PrivateAssets="all" />
   </ItemGroup>
 
