--- a/src/Sdk/Sdk.props
+++ b/src/Sdk/Sdk.props
@@ -12,6 +12,11 @@
     <PackageTargetFallback>net11;net20;net35;net40;net403;net45;net451;net452;net46;net461;net462;net47;net471;netcore;netcore45;netcore451;netcore50;netcoreapp;netcoreapp1.0;netcoreapp2.0;win8;win81;win10;sl4;sl5;wp;wp7;wp75;wp8;wp81;wpa81;uap;uap10;netstandard1.0;netstandard1.1;netstandard1.2;netstandard1.3;netstandard1.4;netstandard1.5;netstandard1.6;netstandard2.0;netcoreapp1.0;netcoreapp2.0;monoandroid;monotouch;monomac;xamarinios;xamarinmac;xamarinpsthree;xamarinpsfour;xamarinpsvita;xamarinwatchos;xamarintvos;xamarinxboxthreesixty;xamarinxboxone</PackageTargetFallback>
   </PropertyGroup>
 
+  <ItemGroup>
+    <!-- Having this in props allows the specific project to opt out of it -->
+    <PackageReference Include="CoreBuild.Help" Version="*" PrivateAssets="All" />
+  </ItemGroup>
+
   <!-- NuGet generated targets -->
   <Import Project="$(RestoreOutputPath)\$(MSBuildProjectFile).nuget.g.props" Condition="Exists('$(RestoreOutputPath)\$(MSBuildProjectFile).nuget.g.props')" />
 
