--- a/src/Sdk/Sdk.props
+++ b/src/Sdk/Sdk.props
@@ -7,7 +7,7 @@
     <!-- Instruct NuGet that we use PackageReference, rather than project.json -->
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     <!-- Specify a well-known usually ignored directory for the generated targets -->
-    <RestoreOutputPath>$(MSBuildProjectDirectory)\.nuget</RestoreOutputPath>
+    <RestoreOutputPath>$(MSBuildProjectDirectory)\.nuget\$(MSBuildProjectName)</RestoreOutputPath>
     <!-- Allow restoring any packages. Copied from NuGetizer -->
     <PackageTargetFallback>net11;net20;net35;net40;net403;net45;net451;net452;net46;net461;net462;net47;net471;netcore;netcore45;netcore451;netcore50;netcoreapp;netcoreapp1.0;netcoreapp2.0;win8;win81;win10;sl4;sl5;wp;wp7;wp75;wp8;wp81;wpa81;uap;uap10;netstandard1.0;netstandard1.1;netstandard1.2;netstandard1.3;netstandard1.4;netstandard1.5;netstandard1.6;netstandard2.0;netcoreapp1.0;netcoreapp2.0;monoandroid;monotouch;monomac;xamarinios;xamarinmac;xamarinpsthree;xamarinpsfour;xamarinpsvita;xamarinwatchos;xamarintvos;xamarinxboxthreesixty;xamarinxboxone</PackageTargetFallback>
   </PropertyGroup>
